sumo/tests/sumo/output/e3/errors/id_empty/detector.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 05/02/13 14:12:11 by SUMO sumo Version 0.17.0
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo-sim.org/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
        <additional-files value="input_additional.add.xml"/>
    </input>

    <time>
        <begin value="0"/>
        <end value="1000"/>
    </time>

    <report>
        <no-duration-log value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<e3Detector>
</e3Detector>
